kustomize/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
